1-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: helloworld  
  labels:
    istio-injection: enabled  # Label for Istio sidecar injection
