3-service.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
  namespace: helloworld
spec:
  selector:
    app: helloworld  # Targets the pods with this label
  ports:
    - protocol: TCP
      port: 80  # Service port
      targetPort: 80  # Pod port
  type: ClusterIP
