4-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress
  namespace: helloworld
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: helloworld.127-0-0-1.nip.io  # Domain name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helloworld-service  # Reference to the service
            port:
              number: 80

  - host: helloworld.192-168-49-2.nip.io  # Domain name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helloworld-service  # Reference to the service
            port:
              number: 80

  - host: helloworld.42dev.co  # Domain name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helloworld-service  # Reference to the service
            port:
              number: 80
